--- a/css/main.css
+++ b/css/main.css
@@ -5527,8 +5527,8 @@ button {
   padding: 17px 22px;
 }
 
-/* #header-bg-default {
-  background: url("../images/header-bg-default.png") center center/cover no-repeat;
+/* #header-default-bg {
+  background: url("../images/header-default-bg.png") center center/cover no-repeat;
 } */
 
 /* ==========================================================================
@@ -16463,4 +16463,52 @@ button:focus {
     
   .black-default-bg{
     position: absolute;
+  }
+
+  /* ==========================================================================
+   #Maintenance
+   ========================================================================== */
+
+  .service-item>img{
+    width: 50px;
+    height: 50px;
+  }
+
+  .service-item>img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+
+  .service-item>img#cooling-inspection{
+    width: 45px;
+    height: 50px;
+  }
+  
+  .service-item>img#coil-duct-sani{
+    width: 90px;
+    height: 50px;
+  }
+
+  .service-item>img#coil-duct-sani:hover{
+    transform: scale(1.1);
+  }
+
+  .service-item[data-category="heating"],
+  .service-item[data-category="cooling"],
+  .service-item[data-category="air-quality"] {
+      display: none;
+  }
+
+  .service-item {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap; 
+    height: 100px;
+  }
+
+  service-item p{
+    padding: 0px;
+    border:0px; 
+    text-align: center;
+    line-height: 13px;
   }
