--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
   font-weight: 700;
   text-transform: none;
   line-height: 1.2;
@@ -62,18 +62,22 @@ h2 {
 
 h3 {
   font-size: 24px;
+  font-weight: 500;
 }
 
 h4 {
   font-size: 18px;
+  font-weight: 500;
 }
 
 h5 {
   font-size: 15px;
+  font-weight: 400;
 }
 
 h6 {
   font-size: 13px;
+  font-weight: 400;
 }
 
 ul {
@@ -385,7 +389,7 @@ button {
    #CONTACT
    ========================================================================== */
 .contact-info__item {
-  color: #222;
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
@@ -491,9 +495,9 @@ button {
  * 3. Ensure the page always fills at least the entire height of the viewport.
  */
 html, body {
-  background: #fff;
-  color: #555;
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  background: #000000;
+  color: #ffffff;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
   font-size: 13px;
   line-height: 2.3076923077;
   font-weight: 400;
@@ -521,19 +525,19 @@ html, body {
 }
 
 .ic-insta:hover {
-  color: #e1306c;
+  color: #FC83D8
 }
 
 .ic-twi:hover {
   color: #00aced;
 }
 
-.ic-pinterest:hover {
+.ic-youtube:hover {
   color: #cb2027;
 }
 
-.ic-google:hover {
-  color: #dd4b39;
+.ic-linkedin:hover {
+  color: #3999dd;
 }
 
 /* ==========================================================================
@@ -698,19 +702,19 @@ a:hover {
 }
 
 .list-social-2 .list-social__item .ic-insta:hover {
-  color: #e1306c;
+  color: #FC83D8
 }
 
 .list-social-2 .list-social__item .ic-twi:hover {
   color: #00aced;
 }
 
-.list-social-2 .list-social__item .ic-pinterest:hover {
+.list-social-2 .list-social__item .ic-youtube:hover {
   color: #cb2027;
 }
 
-.list-social-2 .list-social__item .ic-google:hover {
-  color: #dd4b39;
+.list-social-2 .list-social__item .ic-linkedin:hover {
+  color: #3999dd;
 }
 
 .list-social--ver .list-social__item {
@@ -739,19 +743,19 @@ a:hover {
 }
 
 .list-social--light .list-social__item .ic-insta:hover {
-  color: #e1306c;
+  color: #FC83D8
 }
 
 .list-social--light .list-social__item .ic-twi:hover {
   color: #00aced;
 }
 
-.list-social--light .list-social__item .ic-pinterest:hover {
-  color: #cb2027;
-}
+.list-social--light .list-social__item .ic-youtube:hover {
+    color: #cb2027;
+  }
 
-.list-social--light .list-social__item .ic-google:hover {
-  color: #dd4b39;
+.list-social--light .list-social__item .ic-linkedin:hover {
+  color: #3999dd;
 }
 
 .list-social--light2 .list-social__item a {
@@ -763,19 +767,19 @@ a:hover {
 }
 
 .list-social--light2 .list-social__item .ic-insta:hover {
-  color: #e1306c;
+  color: #FC83D8
 }
 
 .list-social--light2 .list-social__item .ic-twi:hover {
   color: #00aced;
 }
 
-.list-social--light2 .list-social__item .ic-pinterest:hover {
+.list-social--light2 .list-social__item .ic-youtube:hover {
   color: #cb2027;
 }
 
-.list-social--light2 .list-social__item .ic-google:hover {
-  color: #dd4b39;
+.list-social--light2 .list-social__item .ic-linkedin:hover {
+  color: #3999dd;
 }
 
 .list-social--big .list-social__item:first-child a {
@@ -798,19 +802,19 @@ a:hover {
 }
 
 .list-social--md .list-social__item .ic-insta:hover {
-  color: #e1306c;
+  color: #FC83D8
 }
 
 .list-social--md .list-social__item .ic-twi:hover {
   color: #00aced;
 }
 
-.list-social--md .list-social__item .ic-pinterest:hover {
+.list-social--md .list-social__item .ic-youtube:hover {
   color: #cb2027;
 }
 
-.list-social--md .list-social__item .ic-google:hover {
-  color: #dd4b39;
+.list-social--md .list-social__item .ic-linkedin:hover {
+  color: #3999dd;
 }
 
 .list-social-3 {
@@ -1309,7 +1313,7 @@ a:hover {
 }
 
 .media-project .media__img {
-  overflow: hidden;
+  overflow: visible;
 }
 
 .media-project .media__img img {
@@ -1581,13 +1585,14 @@ a:hover {
 
 .media-project-2 {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   margin-bottom: 20px;
 }
 
 .media-project-2 .media__img {
   margin: 0 auto;
   text-align: center;
+  overflow: visible;
 }
 
 .media-project-2 .media__img > img {
@@ -1661,7 +1666,7 @@ a:hover {
 
 .media-project-3 {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   margin-bottom: 100px;
 }
 
@@ -1734,6 +1739,7 @@ a:hover {
   padding-left: 80px;
   max-width: 750px;
   position: relative;
+  color: white;
 }
 
 @media (max-width: 1199px) {
@@ -1744,7 +1750,7 @@ a:hover {
 
 .media-project-3 .media__img {
   width: 685px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .media-project-3 .media__img > a {
@@ -1771,8 +1777,12 @@ a:hover {
   transition: all 1s ease;
 }
 
-.media-project-3 .media__img a {
-  display: block;
+.media-project-3 .media__img > img {
+  padding-left: 200px;
+}
+
+.media-project-3.right .media__img > img {
+  padding-left: 100px;
 }
 
 .media-project-3 .add,
@@ -3047,20 +3057,20 @@ a:hover {
 .rev-text-1 {
   text-transform: uppercase;
   letter-spacing: 0.3em;
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
 }
 
 .rev-text-2 {
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
 }
 
 .rev-text-3 {
   text-decoration: underline;
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
 }
 
 .rev-text-4 {
-  font-family: "Poppins", Arial, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", "Poppins", Arial, "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.3em;
   -webkit-writing-mode: vertical-lr;
@@ -3546,7 +3556,7 @@ a:hover {
 .title--sm2 {
   font-weight: 700;
   font-size: 18px;
-  color: #222;
+  color: #ffffff;
   text-transform: uppercase;
 }
 
@@ -3795,11 +3805,13 @@ button {
 
 .au-input,
 .au-textarea {
-  background: #f8f8f8;
+  background: #262D33;
   line-height: 1.25;
   padding: 17px 20px;
-  color: #333;
+  color: #ffffff;
   margin-bottom: 20px;
+  border:none;
+  border-bottom: 1px solid #929292;
 }
 
 .au-input::-webkit-input-placeholder,
@@ -5095,7 +5107,10 @@ button {
   position: relative;
   padding: 75px 0;
   padding-bottom: 95px;
+  background-color: black;
   background-image: url("../images/bg-footer-01.jpg");
+  border: none;
+  border-top: 2px solid #262D33;
 }
 
 .footer.bg-parallax {
@@ -5158,7 +5173,7 @@ button {
   color: #ffffff;
   text-transform: uppercase;
   margin-bottom: 30px;
-  font-family: Poppins,Arial,"Helvetica Neue",sans-serif;
+  font-family: "Montserrat", "Poppins" ,Arial,"Helvetica Neue",sans-serif;
   line-height: -webkit-calc(60/48);
   line-height: -moz-calc(60/48);
   line-height: calc(60/48);
@@ -5171,7 +5186,9 @@ button {
 #subscribe-btn {
   background-color: #00D1FF;
   color: black;
-  border-radius: 3px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 #subscribe-btn:hover {
@@ -5179,14 +5196,25 @@ button {
 }
 
 #subscribe-inputs {
-  background-color: #262626;
-  color: #929292;
-  border-bottom: #929292;
-  border-width: 1px;
-  border-style: solid;
-  max-height: 45px;
+  background-color: #262D33;
+  color: #ffffff;
+  border:none;
+  border-bottom: 1px solid #929292;
 }
 
+
+#schedule-btn {
+  background-color: #00D1FF;
+  margin: 50px 0px;
+  color: black;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+#schedule-btn:hover {
+  background-color: #00a1c6;
+}
 
 /* ==========================================================================
    #HEADER
@@ -5210,7 +5238,9 @@ button {
 }
 
 .header-contact {
-  color: #fff;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 600;
   display: inline-block;
   margin-right: 40px;
   padding: 5px 20px 5px 20px;
@@ -5771,7 +5801,7 @@ button {
 }
 
 .btn-close:hover {
-  color: #04D1FF;
+  color: #00D1FF;
 }
 
 .menu-sidebar-nav-menu {
@@ -5784,7 +5814,7 @@ button {
 }
 
 .menu-sidebar-nav-menu .menu a:hover {
-  color: #04D1FF;
+  color: #00D1FF;
 }
 
 .menu-sidebar-nav-menu .menu-item {
@@ -5827,7 +5857,7 @@ button {
 }
 
 .menu-sidebar-nav-menu .menu-item .sub-menu .menu-item a:hover {
-  color: #04D1FF;
+  color: #00D1FF;
 }
 
 /* ==========================================================================
@@ -6778,7 +6808,7 @@ button {
   color: #00D1FF;
   text-transform: uppercase;
   margin-bottom: 30px;
-  font-family: Poppins,Arial,"Helvetica Neue",sans-serif;
+  font-family: "Montserrat", "Poppins" ,Arial,"Helvetica Neue",sans-serif;
 }
 
 .widget-sidebar .widget {
@@ -16457,13 +16487,17 @@ button:focus {
   }
 
   main.tos {
-    background-color: black; 
-    position: relative;
+    background-color: black;
   }
-    
-  .black-default-bg{
-    position: absolute;
+
+  .black-default-bg {
+    position:absolute;
+    height: 100%;
+    width:100%;
+    margin: 0px;
+    padding: 0px;
   }
+  
 
   /* ==========================================================================
    #Maintenance
@@ -16501,20 +16535,29 @@ button:focus {
 
   .service-item {
     display: flex;
-    justify-content: center;
-    flex-flow: row wrap; 
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: column nowrap; 
     height: 100px;
   }
-
-  service-item p{
-    padding: 0px;
-    border:0px; 
+  .service-item > p{
     text-align: center;
-    line-height: 13px;
+    line-height: 16px;
+    font-weight: 200;
   }
 
+  /* ==========================================================================
+   #About Us
+   ========================================================================== */
+
+
   .about-bg {
-    position: absolute;
+    position:absolute;
+    z-index: 2;
+    width:100%;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
   } 
   
   p.about-us {
@@ -16539,7 +16582,7 @@ button:focus {
      height: 30vh;
      z-index: 2;
      margin:0px;
-    padding:0px
+     padding:0px;
   }
   
   div#duct-air-handler{
@@ -16550,7 +16593,7 @@ button:focus {
      height: 30vh;
      z-index: 2;
      margin:0px;
-    padding:0px
+     padding:0px;
   }
   
   div#wall-mounted-heating-cooling{
@@ -16561,7 +16604,7 @@ button:focus {
      height: 35vh;
      z-index: 2;
      margin:0px;
-    padding:0px
+     padding:0px;
   }
   
   div#floor-mounted{
@@ -16572,7 +16615,7 @@ button:focus {
      height: 25vh;
      z-index: 2;
      margin:0px;
-    padding:0px
+     padding:0px;
   }
   
   div#multi-zone-heating-cooling{
@@ -16583,7 +16626,7 @@ button:focus {
      height: 25vh;
      z-index: 2;
      margin:0px;
-    padding:0px
+     padding:0px;
   }
   
   div#horizontal-ducted{
@@ -16594,6 +16637,40 @@ button:focus {
      height: 25vh;
      z-index: 2;
      margin:0px;
-    padding:0px;
+     padding:0px;;
   }
 
+   /* ==========================================================================
+   #Font
+   ========================================================================== */
+
+
+.montserrat-reg {
+  font-family: "montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.montserrat-med {
+  font-family: "montserrat", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.montserrat-bold {
+  font-family: "montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.pp-scrollable{
+  background-image: url('../images/arch-pipe.png');
+  background-repeat: no-repeat;
+  background-position: 10%;
+}
+/* 
+.pp-scrollable{
+  background-image: url('../images/arch-pipe.png'), url('../images/s-pipe.png'), url('../images/l-pipe.png'), url('../images/snake-pipe.png'), url('../images/house.png');
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+  background-position: 10% 20%, 30% 40%, 50% 60%, 70% 80%, 90% 10%;
+} */
