--- a/css/main.css
+++ b/css/main.css
@@ -5192,7 +5192,8 @@ button {
 }
 
 #subscribe-btn:hover {
-  background-color: #00a1c6;
+  cursor: pointer;
+  background-image: linear-gradient(to right, #00D1FF 0%, #00D1FF 51%, #F7B278 100%);
 }
 
 #subscribe-inputs {
@@ -5213,7 +5214,8 @@ button {
 }
 
 #schedule-btn:hover {
-  background-color: #00a1c6;
+  cursor: pointer;
+  background-image: linear-gradient(to right, #00D1FF 0%, #00D1FF 51%, #F7B278 100%);
 }
 
 /* ==========================================================================
@@ -16674,3 +16676,19 @@ button:focus {
   background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
   background-position: 10% 20%, 30% 40%, 50% 60%, 70% 80%, 90% 10%;
 } */
+
+
+.clients {
+  display: block;
+  width: 100vw;
+  margin: 30px 0 0 0;
+}
+
+.navbar {
+  transition: background-color 0.5s ease-in-out;
+  filter: opacity(.9);
+}
+
+.pp-scrollable{
+  padding-top: 100px;
+}
